# apex-core

./: .gitignore  0.8-migration-guide.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  mypy.ini  pnpm-lock.yaml  ruff.toml
.changeset/: moody-tools-push.md  purple-years-deny.md  slimy-candles-agree.md  strong-experts-grin.md  young-monkeys-allow.md
examples/: .env.example  .gitignore  Dockerfile-example  conversation_persistor.py  echo-agent.py  minimal_worker.py
livekit-agents/: package.json  pyproject.toml
livekit-plugins/: install_local.sh  install_plugins_editable.sh
livekit-plugins/livekit-plugins-browser/: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  package.json  pyproject.toml  setup.py
livekit-plugins/livekit-plugins-browser/cmake/: DownloadCEF.cmake
livekit-plugins/livekit-plugins-browser/livekit/plugins/browser/: __init__.py  log.py  proc_main.py  proto.py  py.typed  version.py
livekit-plugins/livekit-plugins-browser/livekit/plugins/browser/resources/: __init__.py
livekit-plugins/livekit-plugins-browser/src/: .gitignore  CMakeLists.txt  agents_python.cpp  agents_python.hpp  app.cpp  app.hpp  app_mac.mm  browser_handle.cpp  browser_handle.hpp  dev_renderer.cpp  dev_renderer.hpp  dummy.cpp  gleq.h  handler.cpp  handler.hpp  helper_main_linux.cpp  helper_main_mac.mm  helper_main_win.cpp  keyboard_codes.h
livekit-plugins/livekit-plugins-browser/src/resources/: lkcefapp-Info.plist  lkcefhelper-Info.plist
tests/: .gitattributes  .gitignore  __init__.py  change-sophie.opus  conftest.py  fake_stt.py  (+18 more)
(+284 files in other folders)
