[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel.macos]
repair-wheel-command = "" # getting issues with unresolved files

[tool.cibuildwheel]
before-build = "pip install pybind11[global]"// Modified on Tue Jan 21 11:33:41 PM +01 2025
// Modified on Tue Jan 21 11:33:45 PM +01 2025
